<resources>
    <string name="app_name">Samba Client</string>
    <string name="logo_text">smb</string>

    <string name="authenticate_button">Authenticate</string>

    <string name="hint_address">Samba address</string>
    <string name="hint_user">User</string>
    <string name="hint_password">Password</string>
    <string name="hint_domain">Domain</string>
    <string name="hint_share_name">Share name</string>

    <string name="validation_address">Address is required</string>
    <string name="validation_share_name">Share name</string>

    <string name="authentication_success">Authenticated!</string>
    <string name="button_use_share">Use share name</string>
    <string name="remember_address_and_user">Remember address and user</string>
    <string name="remember_share_name">Remember share name</string>

    <string name="menu_sort_options">Sort options</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_maintenance">Maintenance</string>

    <string name="sort_confirm">Confirm</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_file_name">By name</string>
    <string name="sort_modifed_time">By modified time</string>
    <string name="sort_order">Order by</string>
    <string name="sort_asc">Ascending</string>
    <string name="sort_desc">Descending</string>

    <string name="create_directory_title">Create directory</string>
    <string name="create_directory_hint">Directory name</string>
    <string name="create_directory_cancel">Cancel</string>
    <string name="create_directory_create">Create</string>

    <string name="prefereces_explorer">File explorer</string>
    <string name="prefereces_show_as_list">Show as list</string>
    <string name="prefereces_show_as_list_summary">Display files list as list or grid</string>
    <string name="prefereces_grid_columns_count">Grid columns count</string>

    <string name="file_download">Download</string>
    <string name="file_open">Open</string>
    <string name="file_delete">Delete</string>
    <string name="file_saved_to">File saved to: </string>
    <string name="file_was_deleted">File was deleted</string>

</resources>
